--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<h2>Anfrage von {{Vorname}} {{Name}}</h2>
-<p>Position: {{Position}}</p>
-<p>Email: {{Email}}</p>
-<p>Telefon: {{Telefon}}</p>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+  <title>Anfrage</title>
+</head>
+<body>
+  <h1>Angebotsanfrage</h1>
+  <p><strong>Name:</strong> {{Name}}</p>
+  <p><strong>Vorname:</strong> {{Vorname}}</p>
+  <p><strong>Position:</strong> {{Position}}</p>
+  <p><strong>Email:</strong> {{Email}}</p>
+  <p><strong>Telefon:</strong> {{Telefon}}</p>
+</body>
+</html>
